# langjoin

./: README.md  pyproject.toml
src/langjoin/: __init__.py  __main__.py  epub.py  prompts.py  replace.py  transform_llm.py  transform_local.py
src/langjoin/transformers/: transform_llm.py  transform_local.py  transform_mock.py
static/epub/: monkey.epub  thecountofmontecristo.epub
tests/: epub_tests.py
