[project]
name = "langjoin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bruno Carvalhal" }
]
dependencies = [
    "epubfile>=0.0.9",
    "lxml>=5.3.0",
    "spacy>=3.8.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz",
    "translate>=3.6.1",
    "langchain-openai>=0.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"langjoin" = "langjoin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langjoin"]
